Fix Swagger Authorize
